--- a/dense_correspondence/evaluation/make_video.ipynb
+++ b/dense_correspondence/evaluation/make_video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "setting CUDA_VISIBLE_DEVICES =  0,1,2,3,4,5,6,7,\n",
+      "setting CUDA_VISIBLE_DEVICES =  0,1,2,3,4,5,6,7,\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/resnet34-333f7ec4.pth\" to /home/priya/.cache/torch/checkpoints/resnet34-333f7ec4.pth\n",
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Using SpartanDataset:\n",
       "   - in train mode\n",
       "   - number of scenes 1\n",
-      "   - total images:     3730\n"
+      "   - total images:     3600\n"
      ]
     }
    ],
@@ -67,9 +81,9 @@
     "\n",
     "\n",
     "# mugs\n",
-    "network_name = \"rope_902_simple_camfixed_depth_norm_3\"\n",
+    "network_name = \"rope_noisy_1400_depth_norm_3\"\n",
     "# log_list.append(\"2018-05-18-16-26-26\") # many mugs, moving robot\n",
-    "log_list.append(\"rope_902_simple_camfixed_depth\") # may mugs, stationary robot\n",
+    "log_list.append(\"rope_noisy_1400_test\") # may mugs, stationary robot\n",
     "\n",
     "\n",
     "# shoes\n",
@@ -93,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +123,7 @@
     "descriptor_image_stats = dcn.descriptor_image_stats\n",
     "\n",
     "def make_descriptors_images(log_folder, save_images_dir, make_masked_video=False):\n",
-    "    image_folder = rgb_filename = os.path.join(log_folder, \"processed/real_images\")\n",
+    "    image_folder = rgb_filename = os.path.join(log_folder, \"real/images\")\n",
     "    for img_file in sorted(os.listdir(image_folder)):\n",
     "        #print i\n",
     "        start = time.time()\n",
@@ -133,24 +147,27 @@
     "        if make_masked_video:\n",
     "            mask_name = idx_str + \"_mask.png\"\n",
     "            mask_filename = os.path.join(log_folder, \"processed\", \"image_masks\", mask_name)\n",
-    "            mask = np.asarray(Image.open(mask_filename))\n",
-    "            mask_three_channel = np.zeros((480,640,3))\n",
-    "            for j in range(3):\n",
-    "                mask_three_channel[:,:,j] = mask\n",
-    "            res_a_masked = res_a * mask_three_channel\n",
+    "            mask = cv2.imread(mask_filename, 0)\n",
+    "            #mask_three_channel = np.zeros((480,640,3))\n",
+    "            #for j in range(3):\n",
+    "             #   mask_three_channel[:,:,j] = mask\n",
+    "            res_a_masked = cv2.bitwise_and(res_a,res_a,mask = mask)\n",
+    "#             print mask.shape, res_a_masked.shape\n",
+    "#             res_a_masked = res_a * mask\n",
+    "            #res_a_masked = res_a * mask_three_channel\n",
     "\n",
     "        \n",
     "        \n",
     "        # save rgb image, descriptor image, masked descriptor image\n",
     "        \n",
     "        save_file_name = os.path.join(save_images_dir, idx_str + \"_res.png\")\n",
-    "        plt.imsave(save_file_name, res_a)\n",
+    "        plt.imsave(save_file_name, res_a_masked)\n",
     "        print \"forward and saving at rate\", time.time()-start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -238,104 +255,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "save_images_dir /home/priya/code/data_volume/pdc_synthetic_2/logs_proto/rope_902_simple_camfixed_depth/processed/video_images\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.00866699219\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.81498599052\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.69995594025\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.83361101151\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.18802189827\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.92217683792\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.93015408516\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.81828093529\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.96065402031\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.83581113815\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.7786719799\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.03917503357\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.86448287964\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.37063980103\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.21633481979\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.99431109428\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.9171462059\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.0269370079\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.90603399277\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.30425190926\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.13890314102\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.8154270649\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 9.59139990807\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 8.42778301239\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 8.82382082939\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 9.00654387474\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 8.91531801224\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 9.60560083389\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 9.44936299324\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 9.23479604721\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 9.0648419857\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.78389501572\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.06649899483\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.69624710083\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.09050893784\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.2003428936\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.56660199165\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.59330201149\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 6.79873609543\n",
-      "normalizing descriptor norm\n",
-      "forward and saving at rate 7.01721596718\n",
-      "log_name rope_902_simple_camfixed_depth\n",
-      "making descriptor video\n",
-      "descriptor video command:\n",
-      "ffmpeg -framerate 30 -pattern_type glob -i '*res.png' -c:v libx264 -r 30 /home/priya/code/data_volume/pdc_synthetic_2/logs_proto/rope_902_simple_camfixed_depth/processed/videos/rope_902_simple_camfixed_depth_video_descriptors.mp4\n",
-      "done making descriptors\n",
-      "making rgb video\n",
-      "rgb_images_folder /home/priya/code/data_volume/pdc_synthetic_2/logs_proto/rope_902_simple_camfixed_depth/processed/real_images\n",
-      "rgb video command:\n",
-      "ffmpeg -framerate 30 -pattern_type glob -i '*rgb.png' -c:v libx264 -r 30 /home/priya/code/data_volume/pdc_synthetic_2/logs_proto/rope_902_simple_camfixed_depth/processed/videos/rope_902_simple_camfixed_depth_video_rgb.mp4\n",
-      "ffmpeg       -i rope_902_simple_camfixed_depth_video_rgb.mp4 -pix_fmt yuv420p rope_902_simple_camfixed_depth_video_rgb_mac.mp4\n",
-      "ffmpeg       -i rope_902_simple_camfixed_depth_video_rgb.mp4       -i rope_902_simple_camfixed_depth_video_descriptors.mp4      -filter_complex '[0:v]pad=iw*2:ih[int];[int][1:v]overlay=W/2:0[vid]'       -map [vid]       -c:v libx264       -crf 23       -preset veryfast       output_rope_902_simple_camfixed_depth.mp4\n"
+      "save_images_dir /home/priya/code/data_volume/pdc_synthetic_2/logs_proto/rope_noisy_1400_test/processed/video_images\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/torch/nn/functional.py:2562: UserWarning: nn.functional.upsample_bilinear is deprecated. Use nn.functional.interpolate instead.\n",
+      "  warnings.warn(\"nn.functional.upsample_bilinear is deprecated. Use nn.functional.interpolate instead.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normalizing descriptor norm\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.1.0) /io/opencv/modules/core/src/arithm.cpp:245: error: (-215:Assertion failed) (mtype == CV_8U || mtype == CV_8S) && _mask.sameSize(*psrc1) in function 'binary_op'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-7e7baf4c5513>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m\"save_images_dir\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_images_dir\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mmake_descriptors_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_images_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmake_masked_video\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;31m#     make_videos(log_folder, save_images_dir, make_masked_video=make_masked_video)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-afd5cc93930e>\u001b[0m in \u001b[0;36mmake_descriptors_images\u001b[0;34m(log_folder, save_images_dir, make_masked_video)\u001b[0m\n\u001b[1;32m     39\u001b[0m             \u001b[0;31m#for j in range(3):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m              \u001b[0;31m#   mask_three_channel[:,:,j] = mask\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m             \u001b[0mres_a_masked\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbitwise_and\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres_a\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mres_a\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;31m#             print mask.shape, res_a_masked.shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;31m#             res_a_masked = res_a * mask\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.1.0) /io/opencv/modules/core/src/arithm.cpp:245: error: (-215:Assertion failed) (mtype == CV_8U || mtype == CV_8S) && _mask.sameSize(*psrc1) in function 'binary_op'\n"
      ]
     }
    ],
    "source": [
     "logs_special_prefix = \"/home/priya/code/data_volume/pdc_synthetic_2/logs_proto/\"\n",
-    "make_masked_video = False\n",
+    "make_masked_video = True\n",
     "\n",
     "for log in log_list:\n",
     "    log_folder = os.path.join(logs_special_prefix, log)\n",
@@ -344,13 +297,13 @@
     "        os.makedirs(save_images_dir)\n",
     "    print \"save_images_dir\", save_images_dir\n",
     "    \n",
-    "    make_descriptors_images(log_folder, save_images_dir, make_masked_video=make_masked_video)\n",
-    "    make_videos(log_folder, save_images_dir, make_masked_video=make_masked_video)"
+    "    make_descriptors_images(log_folder, save_images_dir, make_masked_video=True)\n",
+    "#     make_videos(log_folder, save_images_dir, make_masked_video=make_masked_video)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
